--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
-<!-- {% seo %} -->
-    <h1 class="project-name">{{ page.title | default: site.title }}</h1>
+{% seo %}
   </head>
 
   <body>
@@ -20,7 +19,8 @@
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+<!--           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1> -->
+          <h1 id="project-title">{{ page.title | default: site.title }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
           {% if site.show_downloads %}
