--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,11 @@
           {% endif %}
 
 <!--           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1> -->
-          <a href="https://eddiemcconkie.github.io/ePortfolio/"><h1 id="project_title">{{ page.title | default: site.github.repository_name }}</h1></a>
+          <h1 id="project_title">{{ page.title | default: site.github.repository_name }}</h1>
 <!--           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2> -->
           <h2 id="project_tagline">{{ page.description | default: site.github.project_tagline }}</h2>
+      
+          <a href="https://eddiemcconkie.github.io/ePortfolio/">Home</a>
 
           {% if site.show_downloads %}
             <section id="downloads">
