--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,13 @@
           <h1 id="project_title">{{ page.title | default: site.github.repository_name }}</h1>
 <!--           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2> -->
           <h2 id="project_tagline">{{ page.description | default: site.github.project_tagline }}</h2>
-      
-          <a href="https://eddiemcconkie.github.io/ePortfolio/">Home</a>
+          
+          <nav>
+            <ul>
+              <li><a href="https://eddiemcconkie.github.io/ePortfolio/">Home</a>
+              <li><a href="https://eddiemcconkie.github.io/ePortfolio/resume.html">Resume</a>
+            </ul>
+          </nav>
 
           {% if site.show_downloads %}
             <section id="downloads">
