--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-
+    
+    <style>
+      nav ul {
+      list-style: none;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
+      margin: 0;
+    }
+    </style
+      
 {% seo %}
   </head>
 
