--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       grid-template-columns: repeat(auto-fit, minmax(6em, 1fr));
       margin: 0;
     }
-    </style
+    </style>
       
 {% seo %}
   </head>
@@ -37,6 +37,7 @@
             <ul>
               <li><a href="https://eddiemcconkie.github.io/ePortfolio/">Home</a>
               <li><a href="https://eddiemcconkie.github.io/ePortfolio/resume.html">Resume</a>
+              <li></li>
               <li></li>
               <li></li>
             </ul>
