--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,4 +1,4 @@
-<iframe src="{{ include.link }}" 
+<iframe src="https://www.youtube.com/embed/{{ include.id }}" 
     width="560" 
     height="315"
     frameborder="0" 
